--- a/package.json
+++ b/package.json
@@ -21,20 +21,17 @@
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"@ui5/webcomponents": "^1.6.0",
-		"autoprefixer": "^10.4.8",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.16",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.7.1",
 		"svelte-headless-table": "^0.13.3",
-		"svelte-preprocess": "^4.10.7",
+		"svelte-markdown": "^0.2.3",
 		"svelte-simple-datatables": "^0.2.3",
 		"svelte-tiny-virtual-list": "^2.0.5",
-		"tailwindcss": "^3.1.8",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.0.8"
