--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@fontsource/fira-mono": "^4.5.0",
 		"async": "^3.2.4",
 		"cookie": "^0.4.1",
+		"elkjs": "^0.8.2",
 		"svelte-select": "^4.4.7",
 		"svelte-table": "^0.5.0",
 		"svelvet": "^2.0.2"
